--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -66,12 +66,12 @@
                         <div class="col-sm-5">
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="gender" value="hombre" /> Hombre
+                                    <input type="radio" name="gender" value="Hombre" /> Hombre
                                 </label>
                             </div>
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="gender" value="mujer" /> Mujer
+                                    <input type="radio" name="gender" value="Mujer" /> Mujer
                                 </label>
                             </div>
                         </div>
