--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 
 		<!--Enlace de JQuery & JS para la API de Google-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTcGmuWEwzwZXpcYRMguIQoWAc7yrw6Kc&sensor=false"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRGRptSt5K3HaxpmynXqsKFGgQQWYwwUg&sensor=false"></script>
 		
 		<!--JavaScripts utilizados-->
 		<script src="js/pintxos.js" type="text/javascript"></script>
@@ -27,6 +27,8 @@
 		<script src="js/calcRutas.js" type="text/javascript"></script>
 		<script src="js/validarFormulario.js" type="text/javascript"></script>
 		<script src="js/cargarLogin.js" type="text/javascript"></script>
+		
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 	</head>
 
@@ -76,7 +78,8 @@
 			</div>
 			
 			<div class="btnUnete">
-				<a href="/login"><img class="imgBoton" src="img/btn-unete.png"></img></a> 
+				<a href="/login"><img class="imgBoton" src="img/btn-unete.png"></img></a>
+				<!--<a href="#contact" data-toggle="modal"><img class="imgBoton" src="img/btn-unete.png"></img></a>-->
 			</div>
 
 			<div>
@@ -151,6 +154,36 @@
 			</nav>
 			
 		</div>
+		
+		<!-------------------
+		--- VENTANA MODAL ---
+		---------------------
+		
+		<div class="modal fade" id="contact" role="dialog">
+			
+			<div class="modal-dialog">
+				
+				<div class="modal-content">
+					
+					<div class="modal-header">
+						
+						<h4>Contact Tech Site</h4>
+						
+					</div>
+					
+					<div class="modal-body">
+						
+						
+						
+					</div>
+					
+				</div>
+				
+			</div>
+			
+		</div>
+		
+		-->
 
 	</body>
 
