--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,30 +6,42 @@
 		<meta charset="utf-8"/>
 
 		<link rel="stylesheet" type="text/css" href="css/profile.css" ><!--Estilos principales-->
-		<link href='https://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic,400|Tangerine|Open+Sans+Condensed:300|Courgette' rel='stylesheet' type='text/css'>
-		<style>
-			body 		{ padding-top:80px; word-wrap:break-word; }
-		</style>
+        <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
+
 		<script src="js/listaPintxos.js" type="text/javascript"></script>
 		
 </head>
 <body>
 	<div class="container">
-	
-		<div class="header">
-			<h1><span class="nom-perfil"></span> <%= user.local.nomUsuario%></h1>
-			<p><strong>email</strong>: <%= user.local.email %><br></p>
-			<div class="btn-desconectar"><a href="/logout">Desconectar</a></div>
+		<div class="logo">
+			<a class="homeButton" href=""><img src="img/logo_trazado_recortado.png" /></a>
 		</div>
-		
-		<div class="contenedor-editar">
-		
-			<div class="btn-editar"><a href="/edita-pintxos">Ver Pintxos</a></div>
-			
-			<div class="btn-editar"><a href="#">Ver Bares </a></div>
-	
-			<div class="btn-editar"><a href="#">Ver Usuarios</a></div>
-	
+		<div class="header">
+			<hr><br>
+			<!--INICIO del contenedor flexible-->
+			<div class="flex-container">
+        		<div class="flex-item" id="datos">
+        			<div id="avatar"><img src="img/default-avatar.png"></div>
+					<div id="nom-usuario"><h1><%= user.local.nomUsuario%></h1></div>
+					<div id="datos-usuario">
+						<p><strong>Email</strong>: <%= user.local.email %><br></p>
+						<p><strong>Sexo</strong>: <%= user.local.sexo %><br></p>
+						<p><strong>Fecha de nacimiento</strong>: <%= user.local.fechaNac %><br></p>
+					</div>
+        		</div>
+        		<div class="flex-item">
+        			<div class="valoracion"><h1>2</h1><p>Pintxos<br>valorados</p></div>
+        		</div>
+        		<div class="flex-item">
+        			<div class="valoracion"><h1>5</h1><p>Bares<br>valorados</p></div>	
+        		</div>
+        		<div class="flex-item">
+        			<div class="valoracion"><h1>3</h1><p>Rutas<br>creadas</p></div>	
+        		</div>
+        	</div>
+        	<!--FIN del contenedor flexible-->
+        	<hr><br>
+			<div class="btn-desconectar"><a href="/logout">Desconectar</a></div>
 		</div>
 	</div>
 </body>
