--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -108,12 +108,12 @@
 								                     </div>
 								                 </div>
 								
-								                 <!--<div class="form-group">
+								                 <div class="form-group">
 								                     <label class="col-sm-3 control-label">Password</label>
 								                     <div class="col-sm-5">
-								                         <input type="password" class="form-control" name="password" />
+								                         <input type="password" class="form-control" name="password" value="<%= user.local.password %>" readonly/>
 								                     </div>
-								                 </div>-->
+								                 </div>
 								
 								                 <div class="form-group">
 								                     <label class="col-sm-3 control-label">Sexo</label>
