--- a/public/css/main.css
+++ b/public/css/main.css
@@ -231,7 +231,7 @@ header {
 
 .secciones div {
 	margin-bottom: 3%;
-	width: 100%;
+	/*width: 100%;*/
 	/*background-color: #FFF;*/	
 }
 
@@ -269,16 +269,23 @@ header {
 }
 
 #bares {
-    background-color: transparent;
-    border: 1px solid blue;
+    background-color: #FFF;
+    width: 100%;
+    height: 540px;
 }
 
-#bares div {
-	background-color: #FFF;
+.imgBar {
+	float: left;
+}
+
+.barTitle {
+	width: 58.5%;
+	float: right;
 }
 
 #calendario {
     background-color: transparent;
+    width: 100%;
 }
 
 #calendario div {
@@ -330,4 +337,12 @@ header {
 .navRedesLateral ul li {
 	margin-top: 10px;
 	margin-left: -10px;
+}
+
+#usuario{
+	margin: 3% 0 -3% 1%;
+	padding:0;
+	font-size: 90%;
+	font-family: 'Courgette', cursive;
+	color: #797070;
 }
