--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -29,10 +29,8 @@
 		
 		<script type="text/javascript" src="js/canvasImg.js"></script>
 		<script type="text/javascript" src="js/insertarImg.js"></script>
-			<script src="js/editarUsuario.js" type="text/javascript"></script>
+		<script src="js/editarUsuario.js" type="text/javascript"></script>
 
-
-		
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 
@@ -40,7 +38,7 @@
 <body>
 	<div class="container">
 		<div class="logo">
-			<a class="homeButton" href=""><img src="img/logo_trazado_recortado.png" /></a>
+			<a class="homeButton" href="/"><img src="img/logo_trazado_recortado.png" /></a>
 		</div>
 		<div class="header">
 			<hr><br>
@@ -54,8 +52,7 @@
         				<a class="btnEditarAvatar" href="#"><img src="../img/edit.png"></a>
         				<canvas id="imageCanvas"></canvas>
         			</div>
-					<div id="nom-usuario"><h1><%= user.local.nomUsuario%></h1>
-					</div>
+					<div id="nom-usuario"><h1><%= user.local.nomUsuario%></h1></div>
 					<div id="id-usuario"><%= user.id%></div>
 					<div id="datos-usuario">
 						<p>Email: </p>
@@ -76,44 +73,7 @@
         	</div>
         	<!--FIN del contenedor flexible-->
         	<hr>
-        	<!-- show any messages that come back with authentication -->
-									
-									<!--<div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-									  <div class="modal-dialog">
-									    <div class="modal-content">
-									      <div class="modal-header">
-									        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									        <h4 class="modal-title" id="exampleModalLabel">Edita tu perfil</h4>
-									      </div>
-									      <div class="modal-body">
-									        <form action="/actualiza-usuarios" id="registrationForm" method="post" >
-									          <div class="form-group">
-									            <label class="control-label">ID:</label>
-									            <input type="text" class="form-control" name="id" value="<%= user.id%>" readonly>
-									          </div>
-									          <div class="form-group">
-									            <label class="control-label">Nombre de usuario:</label>
-									            <input type="text" class="form-control" name="username" value="<%= user.local.nomUsuario%>"/>
-									          </div>
-									          <div class="form-group">
-									            <label class="control-label">Email:</label>
-									            <input type="text" class="form-control" name="email" value="<%= user.local.email%>"/>
-									          </div>
-									          <div class="form-group">
-									            <label class="control-label">Fecha nacimiento:</label>
-									            <input type="text" class="form-control" name="birthday" value="<%= user.local.fechaNac%>"/>
-									          </div>
-									          <button type="submit" class="btn btn-success">Editar</button>
-									        </form>
-									      </div>
-									      <div class="modal-footer">
-									        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-									      </div>
-									    </div>
-									  </div>
-									</div>-->
-									
-									
+        
 								<!-- Inicio de la ventana modal ////////////////////-->
         	<div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 											<div class="modal-dialog">
