--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,13 +76,13 @@
 				</div>
 			</div>
 			
-			<div class="btnUnete">
-				<a href="/login"><img class="imgBoton" src="img/btn-unete.png"></img></a>
+			<div class="<%= clase2 %>" id="btnUnete">
+				<a href="/login"><img  class="imgBoton" src="img/btn-unete.png"></img></a>
 				<!--<a href="#contact" data-toggle="modal"><img class="imgBoton" src="img/btn-unete.png"></img></a>-->
 			</div>
 
 			<div>
-				<nav class="navRedes">
+				<nav class="<%= navRedes %>">
 					<ul>						
 						<li><a href="https://www.facebook.com/profile.php?id=100004284648257" target="_blank"><img src="img/facebook.png" ></a></li>
 						<li><a href="https://twitter.com/ThePintxopo" target="_blank"><img src="img/twitter.png" ></a></li>
