--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,7 +16,6 @@
  	<!-- Fuentes externas -->
   <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
 
-		<script src="js/listaPintxos.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
 
 		<!--Estilos bootstrap-->
@@ -29,7 +28,7 @@
 		
 		<script type="text/javascript" src="js/canvasImg.js"></script>
 		<script type="text/javascript" src="js/insertarImg.js"></script>
-		<script src="js/editarUsuario.js" type="text/javascript"></script>
+		<!--<script src="js/editarUsuario.js" type="text/javascript"></script>-->
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
