--- a/views/edita-pintxos.ejs
+++ b/views/edita-pintxos.ejs
@@ -18,7 +18,7 @@
 	<div class="container">
 		<h1>Bienvenido a la edición de pintxos</h1>
 		<h2>Aquí es donde se cocina...</h2>
-		<div class="homeBtn"><a href="/">Ir a home</a></div>
+		<div class="homeBtn"><a href="/logout">Ir a home</a></div>
 
 		<h3>1. Añade un nuevo pintxo</h3>
 		<!--<div class="btn-aniadir"><a id="mostrarForm" href="#" onclick="mostrarFormulario()">Añadir Pintxo</a></div>-->
