--- a/public/css/main.css
+++ b/public/css/main.css
@@ -388,3 +388,21 @@ header {
 .visible{
 	display: block;
 }
+
+#btnUsuario{
+	position: absolute;
+	margin: 1.5% 0 0 1.5%;
+}
+
+#navBares {
+	position: absolute;
+	width: 10%;
+	margin-top: -4%;
+	margin-left: 25%;
+}
+
+#navBares img {
+	width: 25%;
+	float: right;
+	margin-right: 15%;
+}
