--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,10 +25,11 @@
 		<script src="js/animacionRedes.js" type="text/javascript"></script>
 		<script src="js/googleMap.js" type="text/javascript"></script>
 		<script src="js/calcRutas.js" type="text/javascript"></script>
-		<script src="js/validarFormulario.js" type="text/javascript"></script>
+		<!--<script src="js/validarFormulario.js" type="text/javascript"></script>-->
 		<script src="js/cargarLogin.js" type="text/javascript"></script>
-		<script src="js/calendar.js" type="text/javascript"></script>
+		<!--<script src="js/calendar.js" type="text/javascript"></script>-->
 		<script src="js/galeria.js" type="text/javascript"></script>
+		<script src="js/bares.js" type="text/javascript"></script>
 		
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
@@ -36,8 +37,22 @@
 
 	<body>
 		<header class="mainHeader">
-		<img class="<%= clase %>" id="icono-user" href="/profile" src="img/open-iconic/svg/person.svg" alt="perfil">
-		<div id="usuario"><p><a href="/profile"><%= nombre %></a></p></div>
+		  <div class="<%= clase %>" id="btnUsuario">	
+	      <div class="dropdown">
+	        <!--<img id="icono-user" href="/profile" src="img/open-iconic/svg/person.svg" alt="perfil">-->
+	        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown"><%= nombre %>
+	        <span class="caret"></span></button>
+	        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+	          <li role="presentation"><a role="menuitem" tabindex="-1" href="/profile">Ver perfil</a></li>
+	          <li role="presentation" class="divider"></li>
+	          <li role="presentation"><a role="menuitem" tabindex="-1" href="/logout">Cerrar sesión</a></li>
+	        </ul>
+	      </div>
+	      </div>
+
+		<!--<img id="icono-user" href="/profile" src="img/open-iconic/svg/person.svg" alt="perfil">-->
+		<!--<div id="usuario"><p><a href="/profile"><%= nombre %></a></p></div>-->
+			
 			<nav class="menu">
 				<ul class="navegador">
 					<li id="homeButton" class="active"><a class="homeButton" href="">HOME</a></li>
@@ -48,7 +63,7 @@
 
 			<nav class="menu2">
 				<ul class="navegador">
-					<li><a href="#">ABOUT</a></li>
+					<li><a href="/about">ABOUT</a></li>
 					<li><a class="ancla" href="#calendario">CALENDARIO</a></li>
 					<li><a class="ancla" href="#bares">BARES</a></li>
 				</ul>				
@@ -120,10 +135,14 @@
 				</div>
 				
 				<div id="bares">
-					
+					<!--
 					<div class="principal">
 						<div class="visor">
 							<img src='img/foto1.png' alt='' name='fotoVisor'/>
+							<div id="navBares">
+								<a href=""><img src="img/open-iconic/svg/plus.svg" id="infoIcon"/></a>
+								<a href=""><img src="img/open-iconic/svg/map-marker.svg" id="mapaIcon"/></a>
+							</div>
 						</div>
 					</div>
 					
@@ -142,7 +161,7 @@
 						<img src='img/foto3.png' alt='' name='fotos3' onclick="mifoto(3)"/>
 						<img src='img/foto4.png' alt='' name='fotos4' onclick="mifoto(4)"/>
 					</div>
-				
+				-->
 				</div>
 				
 				<div id="calendario">
