--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -26,12 +26,11 @@
 		<script type="text/javascript" src="js/bootstrapValidator.min.js"></script>
 		<script type="text/javascript" src="js/validadorEditarUser.js"></script>
 		
-		<script type="text/javascript" src="js/canvasImg.js"></script>
-		<script type="text/javascript" src="js/insertarImg.js"></script>
+		<script type="text/javascript" src="js/cambiarAvatar.js"></script>
+		<!--<script type="text/javascript" src="js/insertarImg.js"></script>-->
 		<!--<script src="js/editarUsuario.js" type="text/javascript"></script>-->
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-
 
 </head>
 <body>
@@ -43,23 +42,42 @@
 			<hr><br>
 			<!--INICIO del contenedor flexible-->
 			<div class="flex-container">
-        		<div class="flex-item" id="datos">
-        			<div id="avatar">
-        				<input type="file" id="imageLoader" name="imageLoader"/>
-        				<br/>
-        				<canvas id="imageCanvas"></canvas>
-        				<a class="btnEditarAvatar" href="#"><img src="../img/edit.png"></a>
-        				
-        			</div>
-					<div id="nom-usuario"><h1><%= user.local.nomUsuario%></h1></div>
-					<div id="id-usuario"><%= user.id%></div>
-					<div id="datos-usuario">
-						<p>Email: </p>
-						<p id="email"><%= user.local.email %></p>
-						<p>Sexo: <%= user.local.sexo %></p>
-						<p>Fecha de nacimiento: <%= user.local.fechaNac %></p>
-					</div>
-        		</div>
+							<div class="flex-item" id="datos">
+								
+											<div id="nom-usuario">
+															<h1><%= user.local.nomUsuario%></h1>
+											</div>
+											
+											<div id="avatar">
+											
+															<form action="/actualiza-usuarios" id="cambiarFoto" method="post">
+																			<p id="avatarString"><%= user.local.avatar %></p>
+																			<img id="avatarImg"></img>
+																			<input type="file" id="imageLoader" name="imageLoader"/><br/>
+															</form>
+
+															<button id="falseinput"><img id="btnEditarAvatar" src="img/open-iconic/svg/pencil.svg"></button>
+															
+																<script>
+																$(document).ready( function() {
+																  $('#falseinput').click(function(){
+																    $("#imageLoader").click();
+																  });
+																});
+																</script>
+												
+															<!--<button type="submit" class="btn btn-success" id="btnGuardarAvatar">Guardar avatar actual</button>-->
+															
+											</div>
+											
+											<div id="datos-usuario">
+															<p id="email">Email: <%= user.local.email %></p>
+											
+														<p>Sexo: <%= user.local.sexo %></p>
+											
+											<p>Fecha de nacimiento: <%= user.local.fechaNac %></p>
+											</div>
+							</div>
         		<div class="flex-item">
         			<div class="valoracion"><h1>2</h1><p>Pintxos<br>valorados</p></div>
         		</div>
@@ -87,14 +105,12 @@
 																	<!-- Inicio del formulario ////////////////////-->
 																	<form action="/actualiza-usuarios" id="registrationForm" method="post" class="form-horizontal">
 								                 
-								                 <div class="form-group">
-								                     <label class="control-label">ID</label>
-								                     <input type="text" class="form-control" name="id" value="<%= user.id%>" readonly/>
-								                 </div>
+								                 
 								                 
 								                 <div class="form-group">
 								                     <label class="control-label">Nombre de usuario</label>
 								                     <input type="text" class="form-control" name="username" value="<%= user.local.nomUsuario%>"/>
+								                     <input id="idUsuario" type="text" class="form-control" name="idUsuario" value="<%= user._id%>"/>
 								                 </div>
 								
 								                 <div class="form-group">
@@ -121,11 +137,19 @@
 							<!-- FIN de la ventana modal ////////////////////-->
 
 		 </div>
+
 		 			<!-- BOTONES EDITAR Y DESCONECTAR ////////////////////-->
+
 			   <div id="editar">
 			    	<a class="btnEditar" href="#contact" data-toggle="modal">
-			    	<img src="../img/edit.png"><br>Edita tu perfil</a>
-			    	<a class="btn btn-default" href="/logout">Desconectar</a>
+										<img src="img/open-iconic/svg/pencil.svg" alt="Edita tu perfil">
+										<!--<img src="../img/edit.png"><br>Edita tu perfil</a>-->
+			    	<a class="btnEditar" href="/logout">
+									<img src="img/open-iconic/svg/account-logout.svg">
+								</a>
+								<a class="btnEditar" href="/">
+							<img src="img/open-iconic/svg/home.svg">
+								</a>
 			   </div>
 						<!-- FIN DE BOTONES EDITAR Y DESCONECTAR ////////////////////-->
 		</div>
