--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,7 +11,6 @@
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="css/about.css" ><!--Estilos principales-->
 
-
 	<!-- jQuery and Bootstrap JS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -22,7 +21,6 @@
 	<!-- JS VIDEO -->
 	<script type="text/javascript" src="js/video.js"></script>
 
-	
 	<script>
 	  $(function () {
 
@@ -79,21 +77,24 @@
 		    <article>
 		    	<header>
 		    	<h1>Artzai San José</h1>
-		    	<img src="img/white-round-md.png"></img>
+		    	<canvas id="myCanvas" width="150" height="150"></canvas>
+		    	<!--<img src="img/white-round-md.png"></img>-->
 		    	</header>
 		    	<footer><p>Web developer, Musician</p></footer>
 		    </article>
 		    <article>
 		    	<header>
 		    	<h1>Sheyla Pérez</h1>
-		    	<img src="img/white-round-md.png"></img>
+		    	<canvas id="myCanvas2" width="150" height="150"></canvas>
+		    	<!--<img src="img/white-round-md.png"></img>-->
 		    	</header>
 		    	<footer><p>Web developer, IT</p></footer>
 		    </article>
 		    <article>
 		    	<header>
 		    	<h1>Borja Muñoz</h1>
-		    	<img src="img/white-round-md.png"></img>
+		    	<canvas id="myCanvas3" width="150" height="150"></canvas>
+		    	<!--<img src="img/white-round-md.png"></img>-->
 		    	</header>
 		    	<footer><p>Web developer, Graphic designer</p></footer>
 		    </article>
@@ -119,5 +120,64 @@
 		<p>footer</p>
 	</div>
 </div>
+    <script>
+      var canvas = document.getElementById('myCanvas');
+      var context = canvas.getContext('2d');
+      var centerX = canvas.width / 2;
+      var centerY = canvas.height / 2;
+      var radius = 70;
+
+      context.beginPath();
+      context.arc(centerX, centerY, radius, 0, 2 * Math.PI, false);
+      context.fillStyle = 'green';
+      context.fill();
+      context.lineWidth = 5;
+      context.strokeStyle = '#003300';
+      context.stroke();
+      
+      var canvas2 = document.getElementById('myCanvas2');
+      var context2 = canvas2.getContext('2d');
+      var centerX2 = canvas2.width / 2;
+      var centerY2 = canvas2.height / 2;
+      var radius2 = 70;
+
+      context2.beginPath();
+      context2.arc(centerX2, centerY2, radius2, 0, 2 * Math.PI, false);
+      context2.fillStyle = 'green';
+      context2.fill();
+      context2.lineWidth = 5;
+      context2.strokeStyle = '#003300';
+      context2.stroke();
+      
+      /*var canvas3 = document.getElementById('myCanvas3');
+      var context3 = canvas3.getContext('2d');
+      var centerX3 = canvas3.width / 2;
+      var centerY3 = canvas3.height / 2;
+      var radius3 = 70;
+
+      context3.beginPath();
+      context3.arc(centerX3, centerY3, radius3, 0, 2 * Math.PI, false);
+      context3.fillStyle = 'green';
+      context3.fill();
+      context3.lineWidth = 5;
+      context3.strokeStyle = '#003300';
+      context3.stroke();*/
+      
+      	var ctx = document.getElementById('myCanvas3').getContext("2d");
+		//ctx.lineWidth = 13; 
+		//ctx.strokeStyle = 'rgba(0,0,0,1)'; 
+		//ctx.fillStyle="rgba(0,0,0,0)" // if using this, make sure alpha < 1
+		
+		ctx.arc(100,100, 50, 0, Math.PI*2,true); // you can use any shape
+		ctx.clip();
+		
+		var img = new Image();
+		img.addEventListener('load', function(e) {
+		    ctx.drawImage(this, 0, 0, 200, 300);
+		    //ctx.fill();
+		//ctx.stroke();
+		}, true);
+		img.src="img/fondo-edita-jpg";
+    </script>
 </body>
 </html>
