--- a/views/about.ejs
+++ b/views/about.ejs
@@ -30,7 +30,6 @@
 	        pager: true,
 	        nav: true,
 	        speed: 500,
-	        maxwidth: 800,
 	        namespace: "centered-btns"
 	      });
 
@@ -173,11 +172,11 @@
 		
 		var img = new Image();
 		img.addEventListener('load', function(e) {
-		    ctx.drawImage(this, 0, 0, 200, 300);
+		    ctx.drawImage(this, 0, 0, 100, 100);
 		    //ctx.fill();
 		//ctx.stroke();
 		}, true);
-		img.src="img/fondo-edita-jpg";
+		img.src="img/fondo-edita.jpg";
     </script>
 </body>
 </html>
