--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	
 	<!-- BootstrapValidator JS -->
-	<script type="text/javascript" src="js/bootstrapValidator.min.js"></script>
+	<script type="text/javascript" src="js/bootstrapValidator.js"></script>
 	<script type="text/javascript" src="js/validadorLoginAdmin.js"></script>
 
 
