--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="es">
+	
 	<head>
+		
 		<title>The Pintxopo</title>
 
 		<meta charset="utf-8"/>
@@ -8,6 +11,9 @@
 		<!--Estilos principales-->
 		<link rel="stylesheet" type="text/css" href="css/main.css" >	
 		<link href='https://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic,400|Tangerine|Open+Sans+Condensed:300|Courgette' rel='stylesheet' type='text/css'>
+
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="css/bootstrap.css"/>
 
 		<!--Estilos bootstrap-->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
@@ -25,34 +31,44 @@
 		<script src="js/animacionRedes.js" type="text/javascript"></script>
 		<script src="js/googleMap.js" type="text/javascript"></script>
 		<script src="js/calcRutas.js" type="text/javascript"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+		
 		<!--<script src="js/validarFormulario.js" type="text/javascript"></script>-->
 		<script src="js/cargarLogin.js" type="text/javascript"></script>
+		
 		<!--<script src="js/calendar.js" type="text/javascript"></script>-->
 		<script src="js/galeria.js" type="text/javascript"></script>
 		<script src="js/bares.js" type="text/javascript"></script>
 		
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+		<!-- BootstrapValidator CSS -->
+		<link rel="stylesheet" href="css/bootstrapValidator.css"/>
+
+		<!-- BootstrapValidator JS -->
+		<script type="text/javascript" src="js/bootstrapValidator.js"></script>
+		<script type="text/javascript" src="js/validadorLoginAdmin.js"></script>
+		<script type="text/javascript" src="js/validarRegistroUser.js"></script>
 
 	</head>
 
 	<body>
+		<!--NAVEGADOR Y LOGO-->
 		<header class="mainHeader">
-		  <div class="<%= clase %>" id="btnUsuario">	
-	      <div class="dropdown">
-	        <!--<img id="icono-user" href="/profile" src="img/open-iconic/svg/person.svg" alt="perfil">-->
-	        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown"><%= nombre %>
-	        <span class="caret"></span></button>
-	        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-	          <li role="presentation"><a role="menuitem" tabindex="-1" href="/profile">Ver perfil</a></li>
-	          <li role="presentation" class="divider"></li>
-	          <li role="presentation"><a role="menuitem" tabindex="-1" href="/logout">Cerrar sesión</a></li>
-	        </ul>
-	      </div>
-	      </div>
-
-		<!--<img id="icono-user" href="/profile" src="img/open-iconic/svg/person.svg" alt="perfil">-->
-		<!--<div id="usuario"><p><a href="/profile"><%= nombre %></a></p></div>-->
 			
+			<!--BOTON USUARIO LOGEADO-->
+			<div class="<%= clase %>" id="btnUsuario">	
+		    	<div class="dropdown">
+		        	<!--<img id="icono-user" href="/profile" src="img/open-iconic/svg/person.svg" alt="perfil">-->
+		        	<button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown"><%= nombre %>
+		        	<span class="caret"></span></button>
+			        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+			          <li role="presentation"><a role="menuitem" tabindex="-1" href="/profile">Ver perfil</a></li>
+			          <li role="presentation" class="divider"></li>
+			          <li role="presentation"><a role="menuitem" tabindex="-1" href="/logout">Cerrar sesión</a></li>
+			        </ul>
+		      	</div>
+		    </div><!--FIN BOTON-->
+
+			<!--Navegador izq-->
 			<nav class="menu">
 				<ul class="navegador">
 					<li id="homeButton" class="active"><a class="homeButton" href="">HOME</a></li>
@@ -60,7 +76,8 @@
 					<li><a class="ancla" href="#pintxos">PINTXOS</a></li>
 				</ul>				
 			</nav>
-
+			
+			<!--Navegador dcha-->
 			<nav class="menu2">
 				<ul class="navegador">
 					<li><a href="/about">ABOUT</a></li>
@@ -68,14 +85,18 @@
 					<li><a class="ancla" href="#bares">BARES</a></li>
 				</ul>				
 			</nav>
-
+			
+			<!--Logo-->
 			<div class="logo">
 				<a class="homeButton" href=""><img src="img/logo_trazado_recortado.png" /></a>
 			</div>
 
-		</header>
-
+		</header><!--FIN DE NAVEGADOR-->
+		
+		<!--SECCION CENTRAL-->
 		<div class="mainSection">
+			
+			<!--Texto de bienvenida-->
 			<div class="bienvenida">
 				<h2>La cultura del ocio gastronómico</h2>
 				<!--<p>El sibaritismo gastronómico, unido a la inteligencia contribuye a hacer a los hombres amables.</p>-->
@@ -83,28 +104,28 @@
 				<p id="cita">-Groucho Marx</p>
 			</div>
 			
-			<div class="container-login">
-				<div class="content">
-					<p>Inicia sesión o regístrate:</p>
-					<div class="boton-log"><a href="/login" id="loginBtn" class="boton_form"><span class="fa fa-user"></span>Inicia sesión</a></div>
-					<div class="boton-log"><a href="/signup" class="boton_form"><span class="fa fa-user"></span>Regístrate<a></div>
-				</div>
-			</div>
-			
+			<div id="loginRedes">
+			<!--BOTON LOGIN || UNETE-->
 			<div class="<%= clase2 %>" id="btnUnete">
-				<a href="/login"><img  class="imgBoton" src="img/btn-unete.png"></img></a>
+				<!--<a href="/login"><img  class="imgBoton" src="img/btn-unete.png"></img></a>-->
+				<a href="#signup" data-toggle="modal"><img src="img/btn-unete.png"></img></a>
 				<!--<a href="#contact" data-toggle="modal"><img class="imgBoton" src="img/btn-unete.png"></img></a>-->
 			</div>
 
-			<div>
-				<nav class="<%= navRedes %>">
-					<ul>						
-						<li><a href="https://www.facebook.com/profile.php?id=100004284648257" target="_blank"><img src="img/facebook.png" ></a></li>
-						<li><a href="https://twitter.com/ThePintxopo" target="_blank"><img src="img/twitter.png" ></a></li>
-						<li><a href="https://plus.google.com/u/0/111903066256897710616/posts" target="_blank"><img src="img/google_plus.png"></a></li>
-						<li><a href="http://www.pinterest.com/pdonostia/" target="_blank"><img src="img/pinterest.png" ></a></li>
-					</ul>				
-				</nav>
+			<section class="flex-container">	
+				<article>
+					<a href="https://www.facebook.com/profile.php?id=100004284648257" target="_blank"><img src="img/facebook.png" ></a>
+				</article>
+				<article>
+					<a href="https://twitter.com/ThePintxopo" target="_blank"><img src="img/twitter.png" ></a>
+				</article>
+				<article>
+					<a href="https://plus.google.com/u/0/111903066256897710616/posts" target="_blank"><img src="img/google_plus.png"></a>
+				</article>
+				<article>
+					<a href="http://www.pinterest.com/pdonostia/" target="_blank"><img src="img/pinterest.png" ></a>
+				</article>
+			</section>
 			</div>
 			
 			<div id="rutas">
@@ -190,35 +211,8 @@
 			
 		</div>
 		
-		<!-------------------
-		--- VENTANA MODAL ---
-		---------------------
-		
-		<div class="modal fade" id="contact" role="dialog">
-			
-			<div class="modal-dialog">
-				
-				<div class="modal-content">
-					
-					<div class="modal-header">
-						
-						<h4>Contact Tech Site</h4>
-						
-					</div>
-					
-					<div class="modal-body">
-						
-						
-						
-					</div>
-					
-				</div>
-				
-			</div>
-			
-		</div>
-		
-		-->
+		<% include login-modal %>
+		<% include signup-modal %>
 
 	</body>
 
