--- a/views/signup-modal.ejs
+++ b/views/signup-modal.ejs
@@ -1,45 +1,18 @@
-<!-- views/signup.ejs -->
-<!doctype html>
-<html>
-<head>
-	<title>The Pintxopo</title>
-	<meta charset="utf-8"/>
-	
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="css/bootstrap.css"/>
-
-	<!-- BootstrapValidator CSS -->
-	<link rel="stylesheet" href="css/bootstrapValidator.min.css"/>
-
-	
-	<!-- jQuery and Bootstrap JS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	
-	<!-- BootstrapValidator JS -->
-	<script type="text/javascript" src="js/bootstrapValidator.js"></script>
-	<script type="text/javascript" src="js/validarRegistroUser.js"></script>
-	
-	<style>
-		body 		{ padding-top:80px; }
-	</style>
-</head>
-<body>
-<div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <div class="page-header">
-                    <h2>Registro</h2>
-                </div>
-
-	<!--<h1><span class="fa fa-sign-in"></span> Signup</h1>-->
-
-	<!-- show any messages that come back with authentication -->
-	<% if (message.length > 0) { %>
-		<div class="alert alert-danger"><%= message %></div>
-	<% } %>
-
-                <form id="registrationForm" method="post" class="form-horizontal">
+<!----- VENTANA MODAL LOGIN---
+		----------------------->
+		<div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4>Registrate</h4>
+					</div>
+					<div class="modal-body">
+					
+					<div class="container-form">
+					
+					<!-- Inicio del formulario ////////////////////-->
+					<form id="formRegistro" method="post" action="/signup" class="form-horizontal">
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Nombre de usuario</label>
                         <div class="col-sm-5">
@@ -90,18 +63,17 @@
                             <button type="submit" class="btn btn-default">Sign up</button>
                         </div>
                     </div>
-                </form>
-                
-			<hr>
-
-			<p>¿Ya estás registrado? <a href="/login">Inicia sesión</a></p>
-			<p>o vete a <a href="/">inicio</a>.</p>
-            </div>
-        </div>
-    </div>
-
-</div>
-
-</div>
-</body>
-</html>
+                    </form>
+					</div>
+					</div>
+					
+					<!-- FIN del formulario ////////////////////-->
+					<div class="modal-footer">
+					    <p>¿Ya estás registrado? <a href="#login" data-toggle="modal" data-dismiss="modal">Inicia sesión</a></p>
+						<a class="btn btn-default" data-dismiss="modal">	Cerrar</a>
+					</div>
+				
+				</div>
+			</div>
+		</div>
+		<!-- FIN de la ventana modal ////////////////////-->
