--- a/views/index.ejs
+++ b/views/index.ejs
@@ -232,10 +232,14 @@
 					<div class="titulo">
 						<h1>Calendario</h1>
 						<h2>Organiza tu pintxopote</h2>
-					</div><div>
 						
+						<div id="calendarioiframe">
+						<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=400&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=pintxopo.ss%40gmail.com&amp;color=%23B1365F&amp;ctz=Europe%2FMadrid" frameborder="0" scrolling="no"></iframe>
+						</div>
 						
-						<a class="twitter-timeline" href="https://twitter.com/ThePintxopo" data-widget-id="562877322005852161">Tweets by @ThePintxopo</a>
+						<div id="twitterstream">
+							<a class="twitter-timeline" href="https://twitter.com/ThePintxopo" data-widget-id="562877322005852161">Tweets by @ThePintxopo</a>
+							</div>
 						<script>
 						
 						///widget de twitter
@@ -266,7 +270,8 @@
 					
 					  
 					   <div id="tweetd"></div>
-						
+					   
+					   
 					</div>
 				</div>
 
