--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,8 +27,8 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTcGmuWEwzwZXpcYRMguIQoWAc7yrw6Kc&sensor=false"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 		
-		<!-- Sockets 
-		<script src="/socket.io/socket.io.js"></script>	-->
+		<!-- Sockets -->
+		<script src="/socket.io/socket.io.js"></script>	
 		
 		<!--JavaScripts utilizados-->
 		<script src="js/pintxos.js" type="text/javascript"></script>
@@ -237,7 +237,6 @@
 						<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=400&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=pintxopo.ss%40gmail.com&amp;color=%23B1365F&amp;ctz=Europe%2FMadrid" frameborder="0" scrolling="no"></iframe>
 						</div>
 						
-						<!--- TWITTER!!!
 						<div id="twitterstream">
 							<a class="twitter-timeline" href="https://twitter.com/ThePintxopo" data-widget-id="562877322005852161">Tweets by @ThePintxopo</a>
 							</div>
@@ -272,7 +271,6 @@
 					  
 					   <div id="tweetd"></div>
 					   
-					   --->
 					   
 					</div>
 				</div>
